# Sample-Data-Equity-Analysis

./: .mypy.ini  Equity-Analysis.ipynb  NOTICES.md  README.md  pyproject.toml  report.md
sample_data_equity_analysis/: analysis.py  analysis_helper.py  connection_parameters.py  data_prep.py  data_prep.sql  notebook_ui.py  utilities.py
