[tool.poetry]
name = "edfi-sample-data-equity-analysis"
version = "1.0.0"
description = "Jupyter notebook for exploring potential areas of equity concern in Ed-Fi sample data sets"
authors = ["Ed-Fi Alliance, LLC, and contributors"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
jupyter = "^1.0.0"
pandas = "^1.3.4"
pyodbc = "^4.0.32"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
ipykernel = "^6.9.2"
scipy = "^1.8.0"
ipywidgets = "^8.0.2"
sqlalchemy = "1.3.23"
edfi-sql-adapter = "^1.0.1"
tabulate = "^0.8.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.971"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
